Implement loading foreign key attributes from XMI

BUG: 212779
BUG: 292238

Conflicts:
	umbrello/foreignkeyconstraint.cpp